Update on Overleaf.

--- a/RefsMeteo.bib
+++ b/RefsMeteo.bib
@@ -1,3 +1,10 @@
+@MISC{Bissolli:2020,
+    author = {Bissolli, P. and Ganter, C. and Li, T. and Mekonnen, A. and Sánchez-Lugo, A. {Eds.}},
+    title = {Regional Climates [in “State of the Climate in 2019"]},
+    year = {2020},
+    note = {Bull. Amer. Meteor. Soc., 101 (8), S321–S420, \url{https://doi.org/10.1175/2020BAMSStateoftheClimate_Chapter7.1.}}
+}
+
 @MISC{WMO1248:2020,
   author = {WMO},
   title = {WMO Statement on the State of the Global Climate in 2019},
