--- a/chapterIntro.tex
+++ b/chapterIntro.tex
@@ -90,7 +90,7 @@ of transboundary air pollution with respect to acidification, eutrophication,
 ground level ozone and particulate matter in Europe in 2019.
 Part II summarizes the work on trends performed to support the review of the Gothenburg Protocol, while Part III deals with technical developments going on within the centres.
 
-Appendix~\ref{ch:appx_emis_2019} in Part IV contains information on the national total emissions of main pollutants and  primary particles for 2019, while Appendix~\ref{ch:appx_emis_trends} shows the  emission trends for the period of 2000-2019. Country-to-count\-ry source-receptor matrices with calculations of
+Appendix~\ref{ch:appx_emis_2019} in Part IV contains information on the national total emissions of main pollutants and  primary particles for 2019, while Appendix~\ref{ch:appx_emis_trends} shows the  emission trends for the period of 2000-2019. Country-to-country source-receptor matrices with calculations of
 the transboundary contributions to pollution in different countries
 for 2019 are presented in Appendix~\ref{ch:appx_sr2019}.
 
@@ -465,7 +465,7 @@ DOI: 10.5194/acp-20-2795-2020
 
 \item[]
 Denby, Bruce; Gauss, Michael; Wind, Peter; Mu, Qing; Wærsted, Eivind Grøtting; Fagerli, Hilde; Valdebenito Bustamante, Alvaro Moises; Klein, Heiko.
-Description of the uEMEP_v5 downscaling approach for the EMEP MSC-W chemistry transport model.
+Description of the uEMEP\_v5 downscaling approach for the EMEP MSC-W chemistry transport model.
 Geoscientific Model Development ; 2020; 13.(12); p. 6303-6323
 DOI: 10.5194/gmd-13-6303-2020 
 
@@ -539,11 +539,11 @@ DOI: 10.1016/j.jenvrad.2020.106356
 van der Swaluw, Eric; de Vries, Wilco; Kruit, Roy Wichink; Aben, Jan; Vieno, Massimo; Fagerli, Hilde; Wind, Peter; van Pul, Addo.
 Trend Analysis of Air Pollution and Nitrogen Deposition Over the Netherlands Using the EMEP4NL and OPS Model.
 Springer Proceedings in Complexity 2020 ; p.. 47-51
-DOI: 10.1007/978-3-030-22055-6_8 
+DOI: 10.1007/978-3-030-22055-6\_8 
 
 \item[]
 Wind, Peter; Denby, Bruce; Gauss, Michael.
-Local fractions-a method for the calculation of local source contributions to air pollution, illustrated by examples using the EMEP MSC-W model (rv4_33).
+Local fractions-a method for the calculation of local source contributions to air pollution, illustrated by examples using the EMEP MSC-W model (rv4\_33).
 Geoscientific Model Development ; 2020; 13.(3); p. 1623-1634
 DOI: 10.5194/gmd-13-1623-2020	Projects: NFR 267734 (AirQuip) 
 
