--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -16,7 +16,7 @@ The meteorological data to drive the EMEP MSC-W air quality model have been gene
 
 \subsection{Temperature and precipitation}
 The global mean temperature in 2019 was reported by the World Meteorological Organisation \citep{WMO1248:2020} as the second or third highest on record. In Europe, the annual mean temperature for 2019 was the highest on record according to Copernicus\footnote{\url{https://climate.copernicus.eu/ESOTC/2019/european-temperature}} and October 2018 to September 2019 was the second warmest over land north of 60\degrees N since records began in 1900 (Arctic Report Card 2019 \citep{Overland:ARC2019}.
-Global precipitation anomalies in 2019 were reported by the WMO \citep{WMO1248:2020} and despite some seasonal local extreme precipitation events with heavy rainfall in eastern Norway, north-east Italy, south-east Spain, Ukraine and northern European Russia, and drought in the Iberian Peninsula, Moldova and Latvia, 2019 was overall a normal year in much of Europe according to Copernicus\footnote{\url{https://climate.copernicus.eu/ESOTC/2019/european-wet-and-dry-conditions}} and BAMS (Regional climates 2019).
+Global precipitation anomalies in 2019 were reported by the WMO \citep{WMO1248:2020} and despite some seasonal local extreme precipitation events with heavy rainfall in eastern Norway, north-east Italy, south-east Spain, Ukraine and northern European Russia, and drought in the Iberian Peninsula, Moldova and Latvia, 2019 was overall a normal year in much of Europe according to Copernicus\footnote{\url{https://climate.copernicus.eu/ESOTC/2019/european-wet-and-dry-conditions}} and BAMS (Regional climates 2019, \citep{Bissolli:2020}).
 
 \begin{figure*}[h]
   \centering
@@ -353,7 +353,7 @@ AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (20
   \centering
   \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_eut.png}}
   \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_acid.png}}
-  \caption{Summary for Exceedance of critical load for eutrophication (left) and acidification (right).}
+  \caption{Summary for exceedance of critical load for eutrophication (left) and acidification (right).}
 \label{fig:stats_cl_ex}
 \end{figure}
 \begin{figure}[ht]
@@ -363,7 +363,7 @@ AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (20
   \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2010.png}}
   \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2015.png}}
   \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2019.png}}
- \caption{Exceedance of Critical Load for Eutrophication for the years 2000,2005,2010, 2015 and 2019.}
+ \caption{Exceedance of critical load for eutrophication for the years 2000, 2005, 2010, 2015 and 2019.}
 \label{fig:eutN}
 \end{figure}
 \begin{figure}[ht]
@@ -373,7 +373,7 @@ AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (20
   \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2010.png}}
   \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2015.png}}
   \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2019.png}}
- \caption{Exceedance of Critical Load for Acidification for the years 2000,2005,2010, 2015 and 2019.}
+ \caption{Exceedance of critical load for acidification for the years 2000, 2005, 2010, 2015 and 2019.}
 \label{fig:acid}
 \end{figure}
 
