--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -6,7 +6,7 @@
 \old{TODO}
 
 \section{\label{sec:Trends_introduction}Introduction and background}
-At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body launched the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone (the Gothenburg Protocol), as amended, and, in its decision 2020/2, requested subsidiary bodies to consider the tasks contained in annex I to document ECE/EB.AIR/2020/3−ECE/EB.AIR/WG.5/2020/3 entitled Preparations for the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone as amended in 2012.
+At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body launched the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone (the Gothenburg Protocol), as amended, and, in its decision 2020/2, requested subsidiary bodies to consider the tasks contained in annex I to document ECE/EB.AIR/2020/3-ECE/EB.AIR/WG.5/2020/3 entitled Preparations for the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone as amended in 2012.
 
 In the context of the review of the amended Gothenburg Protocol, a list of questions was given to the subsidiary bodies of the Air Convention.
 
@@ -153,11 +153,11 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 
 
 
-From around 1990 onwards, the total emissions of NO$_x$ declined significantly in Europe, followed by declining nitrogen dioxide concentrations, total nitrate (nitric acid plus particulate nitrate) in air and oxidized nitrogen wet deposition at EMEP background sites. From 2000-2019, the average reductions at long term EMEP background sites have been on average -1.2\% yr$^{-1}$ for nitrogen dioxide concentrations at EMEP background sites (total -24\%). During the same period, NO$_x$ emissions within the western EMEP domain (EU27+UK+EFTA countries) decreased by around XXX. which is reflected in the EMEP/MSC-W model calculations (average of -2.2\% yr$^{-1}$, or in total -44\% ). 
+From around 1990 onwards, the total emissions of NO$_x$ declined significantly in Europe, followed by declining nitrogen dioxide concentrations, total nitrate (nitric acid plus particulate nitrate) in air and oxidized nitrogen wet deposition at EMEP background sites. From 2000-2019, the average reductions at long term EMEP background sites have been on average -1.2\% yr$^{-1}$ for nitrogen dioxide concentrations at EMEP background sites (total -24\%). During the same period, NO$_x$ emissions within the western EMEP domain (EU27+UK+EFTA countries) decreased by -48\%. which is reflected in the EMEP/MSC-W model calculations (average of -2.2\% yr$^{-1}$, or in total -44\% ). 
 The agreement between the trends calculated from observations and from the model (and emissions) agree well for the last period (2010-2019), whilst the trend in the first period is substantially lower than model (and emissions). From Figure XX it can be seen that the agreement between observations and model calculations is very good until around 2008, but that in the years after 2009 the model (and emissions) is shifted down relative to the observations. Similar results have been found in REF Augustin/Sverres study for EEA sites versus emissions?
 
 
-The trends in wet deposition of oxidized nitrogen reflects the long range transported oxidized nitrogen (NO2 that has been converted to nitric acid and particulate and then washed out by rain) and is less sensitive to local changes. Also the trends for wet deposition of nitrate are much lower in the observations than in the model (and emissions of NOx) for the 2000-2019 period. Whilst the average trend in observations are -1.2\% yr$^{-1}$ (Total of -24\%), the model calculates the trend at the same sites to be -2.0 \% yr$^{-1}$ \% (-40\%), close to the trends in emissions from the western EMEP domain (-4X\%). The difference between the trend in observations (and emissions?) are largest during the first period, similar to the results for NO$_2$.However, the model overestimates nitrate wet deposition somewhat up to around 2010, and are the shifted downward and are in very good agreement for the years after. 
+The trends in wet deposition of oxidized nitrogen reflects the long range transported oxidized nitrogen (NO2 that has been converted to nitric acid and particulate and then washed out by rain) and is less sensitive to local changes. Also the trends for wet deposition of nitrate are much lower in the observations than in the model (and emissions of NOx) for the 2000-2019 period. Whilst the average trend in observations are -1.2\% yr$^{-1}$ (Total of -24\%), the model calculates the trend at the same sites to be -2.0 \% yr$^{-1}$ \% (-40\%), close to the trends in emissions from the western EMEP domain (-48\%). The difference between the trend in observations (and emissions?) are largest during the first period, similar to the results for NO$_2$.However, the model overestimates nitrate wet deposition somewhat up to around 2010, and are the shifted downward and are in very good agreement for the years after. 
 
 For particulate nitrate, nitric acid and their sum the results are more complex.The number of sites are few (especially for nitric acid, with only 6 sites), the coverage of Europe more scattered and the quality of the measurements are worse. 
 
@@ -211,7 +211,9 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per
+3 errors27 warnings
+ year (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              33 &          18 &          32 &                  -0.005 &  (-0.008, -0.002) & -0.013 &  (-0.016, -0.011) &                    -0.79 &  (-1.55, -0.04) & -2.10 &  (-2.28, -1.92) \\
@@ -297,7 +299,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 
 
 \section{\label{sec:Trends_reduced nitrogen }Trends in reduced nitrogen}
-Ammonia emissions from agricultural activities have been only slighly reduced for the western EMEP domain since 2000 (around XX\%) 10\%?. Meteovar og signifikans
+Ammonia emissions from agricultural activities have been only slighly reduced for the western EMEP domain since 2000 (-12\% in EU27+UK+EFTA countries). Meteovar og signifikans
 
 This is well reflected in the observed trends of the sum of ammonia and particulate ammonium (-0.9 \% yr$^{-1}$ (obs), -1.3\% yr$^{-1}$ (mod))as well as in the trend of wet deposition of reduced nitrogen (-0.07 \% yr$^{-1}$ (obs), -0.4\% yr$^{-1}$ (mod)). 
 
@@ -392,7 +394,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
           &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (mg $mm^{2} yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
-2000-2019 & all &              48 &          14 &           8 &                    -5.9 &  (-10.2, -1.5) &  -4.5 &   (-7.5, -1.4) &                    -0.07 &    (-0.73, 0.6) & -0.40 &  (-0.69, -0.11) \\
+2000-20norrønavegen19 & all &              48 &          14 &           8 &                    -5.9 &  (-10.2, -1.5) &  -4.5 &   (-7.5, -1.4) &                    -0.07 &    (-0.73, 0.6) & -0.40 &  (-0.69, -0.11) \\
           & autumn &              47 &          10 &           5 &                    -6.3 &  (-11.3, -1.4) &  -4.8 &   (-8.6, -1.0) &                    -0.15 &   (-1.08, 0.79) & -0.32 &   (-0.77, 0.13) \\
           & spring &              46 &           5 &           4 &                   -10.9 &  (-17.7, -4.1) &  -4.9 &   (-11.1, 1.2) &                    -0.28 &    (-0.95, 0.4) & -0.32 &   (-0.68, 0.04) \\
           & summer &              47 &          10 &           5 &                    -8.1 &  (-14.3, -2.0) &  -7.0 &  (-10.4, -3.7) &                     0.01 &    (-0.98, 1.0) & -0.41 &  (-0.76, -0.07) \\
