Update on Overleaf.

--- a/chapterEmis2019.tex
+++ b/chapterEmis2019.tex
@@ -96,7 +96,7 @@ For more detailed information on BC consult the annual CEIP technical inventory 
 \section{Inclusion of the condensable component in reported PM emissions}
 \label{sec:EmisSVOC}
 
-The condensable component of particulate matter is a class of organic compounds of low volatility that may exist in equilibrium between the gas and particle phase. It is probably the biggest single source of uncertainty in PM emissions. For more background see \citep{CONDws2020}.
+The condensable component of particulate matter is a class of organic compounds of low volatility that may exist in equilibrium between the gas and particle phase. It is probably the biggest single source of uncertainty in PM emissions. For more background see \citet{CONDws2020}.
 %% The condensable component of particulate matter is released as a gas but forms particles when it is diluted and cools
 %% down.
 Currently the condensable component is not included or excluded consistently in PM emissions reported by Parties
@@ -108,7 +108,7 @@ Small scale combustion sources make a notable contribution to total PM emissions
 To improve the quality of the input data for air quality models, and following a decision of \citet{EMEPBureaux2020}, the group of experts that met at the workshop organised by MSC-W agreed on the following approach (for more details see \citet{CONDws2020}): 
 
 \begin{itemize}
-\item In year one (2020) the so-called REF2 emission data provided by TNO, which include condensable organics,  is used in an initial estimate for residential combustion emissions. The REF2 data and their usage in the EMEP modeling work in 2020 are described  in  \citet{R2020:SVOC} and \citet{R2020:CAMSREF2}. 
+\item In year one (2020) the so-called REF2 emission data provided by TNO, which include condensable organics,  is used in an initial estimate for residential combustion emissions. The REF2 data and their usage in the EMEP modeling work in 2020 are described  in  \citet{R2020:CAMSREF2} and \citet{R2020:SVOC}. 
 \item  In subsequent years these top-down estimates should be increasingly replaced by national estimates once procedures for quantifying condensables in a more harmonized way are agreed on and implemented.
 \end{itemize}
 
@@ -131,11 +131,11 @@ recommended structure for IIRs\footnote{\url{https://www.ceip.at/reporting-instr
 \subsection{REF2 emissions and improvements compared to last year}
 
 
-The REF2 emission inventory provides a bottom-up database of PM emissions (both PM$_{10}$ and PM$_{2.5}$) from small combustion activities (GNFR category C), taking into account activity data and consistent emission factors that include condensables, for both wood and solid fuel combustion. It was originally developed for the year 2010 \citep{DeniervanderGon2015}. Residential emissions vary from year to year, because of technological developments in the sector (replacement of stoves and boilers) but also because of the heating demand due to fluctuating temperatures. To take this into account, an alternative REF2 was developed for 2015 which was also used as an input to EMEP modelling in 2020. These REF2 emission data and their usage in the EMEP modelling work in 2020 are described in  \citet{R2020:SVOC} and \citet{R2020:CAMSREF2}. This version was developed by scaling the original REF2 for 2010 to the year 2015 by using the trend in the official reported data for PM$_{2.5}$ from GNFR~C for that particular year. The idea behind this approach was that by scaling in this way both the technological changes within each country as well as the annual fluctuation in heating demand are included. It is desirable but difficult to separate these effects because the detailed underlying country data are not available. Countries report emissions only by source sector and for the sum of all fuels; activity data or emissions by appliance type are not available.
+The REF2 emission inventory provides a bottom-up database of PM emissions (both PM$_{10}$ and PM$_{2.5}$) from small combustion activities (GNFR category C), taking into account activity data and consistent emission factors that include condensables, for both wood and solid fuel combustion. It was originally developed for the year 2010 \citep{DeniervanderGon2015}. Residential emissions vary from year to year, because of technological developments in the sector (replacement of stoves and boilers) but also because of the heating demand due to fluctuating temperatures. To take this into account, an alternative REF2 was developed for 2015 which was also used as an input to EMEP modelling in 2020. These REF2 emission data and their usage in the EMEP modelling work in 2020 are described in  \citet{R2020:CAMSREF2} and \citet{R2020:SVOC}. This version was developed by scaling the original REF2 for 2010 to the year 2015 by using the trend in the official reported data for PM$_{2.5}$ from GNFR~C for that particular year. The idea behind this approach was that by scaling in this way both the technological changes within each country as well as the annual fluctuation in heating demand are included. It is desirable but difficult to separate these effects because the detailed underlying country data are not available. Countries report emissions only by source sector and for the sum of all fuels; activity data or emissions by appliance type are not available.
 
 This scaled REF2 for the year 2015 has been used both in EMEP and other modelling activities, and presented in various international expert group meetings such as CAMS, EMEP and UNECE Task Forces (in particular TFEIP and TFMM). This triggered several discussions with experts (including some specific countries), which resulted in the provision of additional information of the national circumstances on the types of stoves installed, etc. (see also \cite{CONDws2020}). 
 
-With this information, as well as additional information made available by IIASA (Zig Klimont), for 5 specific countries (Austria, Germany, Finland, France, the Netherlands) the REF2 emission estimates were revised. The main reason to change the emission estimates is the new information that became available on the appliance types, especially regarding the split between different types of heating stoves (traditional vs. modern). For modern stoves, the PM emission factors are significantly lower compared to traditional stoves, and for the condensable component of PM this effect is even larger.
+With this information, as well as additional information made available by IIASA (Z. Klimont), for 5 specific countries (Austria, Germany, Finland, France, the Netherlands) the REF2 emission estimates were revised. The main reason to change the emission estimates is the new information that became available on the appliance types, especially regarding the split between different types of heating stoves (traditional vs. modern). For modern stoves, the PM emission factors are significantly lower compared to traditional stoves, and for the condensable component of PM this effect is even larger.
 The 5 selected countries were chosen because of feedback received or discussions with national experts which suggested that REF2 emissions may be overestimating. It is planned to also revisit the REF2 emission estimates for the other countries, but this is ongoing work.
 
 \begin{figure}[h]
