--- a/report.tex
+++ b/report.tex
@@ -334,7 +334,7 @@
 %%%%%%%%%%%%%%%%% Compile ONLY selected Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\includeonly{acknow}
-%\includeonly{chapterIntro,chapterTrendsSandN,chapterEMEPModelUpdates}
+%\includeonly{chapterIntro,chapterTrendsSandN,chapterEMEPModelUpdates,chapterAPPX_EMIS_trends}
 
 
 %Please:if you use includeonly on overleaf, just do it temporary and set it back after you have compiled (since others will only see 'your chapter')
